@@ -1,3 +1,7 @@
+2016-11-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/win/wgraph.c (CopyPrint): Fix braces broken by #ifdef.
+
 2016-11-05  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/gp_types.h src/graph3d.c src/graph3d.h src/plot3d.c src/pm3d.c
